--- a/radio_in_background.html
+++ b/radio_in_background.html
@@ -123,6 +123,8 @@
     }
 
     .style_background {
+      left: 0;
+      /* transition: 2s; */
       background-image: linear-gradient(to right, blue 33.3333%, green 0, green 66.66666%, red 0);
       width: 300vw;
       height: 100vh;
